[gd_scene load_steps=15 format=3 uid="uid://f82jftruq2wd"]

[ext_resource type="Texture2D" uid="uid://b7rnpwm4elawv" path="res://Assets/Bosses/The Star/vert_part_spr.png" id="1_c2jwo"]
[ext_resource type="Script" path="res://Components/Stats/Stats.gd" id="2_8qa4k"]
[ext_resource type="Script" path="res://Game/Bosses/The Star/Scripts/vertical_member.gd" id="2_nxfwp"]
[ext_resource type="Script" path="res://Components/Damage/Hurt.gd" id="3_yn76u"]
[ext_resource type="Script" path="res://Components/Damage/Hurtbox.gd" id="4_bhqii"]
[ext_resource type="Script" path="res://Components/Spawners/Spawn.gd" id="4_oyxox"]
[ext_resource type="Script" path="res://Components/Damage/Hitbox.gd" id="5_i3m0h"]
[ext_resource type="PackedScene" uid="uid://b7ru77250j4n0" path="res://Game/Bullets/boss star bullets/star_bullet.tscn" id="5_rewy5"]
[ext_resource type="Script" path="res://Components/Effects/shake_effect.gd" id="8_q0uba"]
[ext_resource type="Script" path="res://Components/Effects/flash_effect.gd" id="9_h4y8n"]
[ext_resource type="Material" uid="uid://c88q6pkhh3vl" path="res://Resources/Visual/Flashes/white_flash_material.tres" id="10_5sqcu"]
[ext_resource type="Script" path="res://Components/Effects/scale_effect.gd" id="11_1v2hr"]
[ext_resource type="Script" path="res://Components/Effects/destroyed_effect.gd" id="12_ccupw"]
[ext_resource type="PackedScene" uid="uid://bkcb672ohnlf3" path="res://Resources/Visual/Explosions/explosion_veffect.tscn" id="14_bk37d"]

[node name="VerticalMember" type="Node2D"]
script = ExtResource("2_nxfwp")
bullet = ExtResource("5_rewy5")

[node name="Vertical" type="Sprite2D" parent="."]
texture = ExtResource("1_c2jwo")
offset = Vector2(-24, 0)

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2(-24, 0)
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("4_bhqii")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(24, 0)
polygon = PackedVector2Array(0, 0, -16, -16, -48, 0, -16, 16)

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(-24, 0)
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("5_i3m0h")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
position = Vector2(24, 0)
polygon = PackedVector2Array(0, 0, -16, -16, -48, 0, -16, 16)

[node name="BulletMarker" type="Marker2D" parent="."]
position = Vector2(-48, 0)

[node name="Stats" type="Node" parent="."]
script = ExtResource("2_8qa4k")
health = 10

[node name="Hurt" type="Node" parent="." node_paths=PackedStringArray("stats", "hurtbox")]
script = ExtResource("3_yn76u")
stats = NodePath("../Stats")
hurtbox = NodePath("../Hurtbox")

[node name="ShakeEffect" type="Node" parent="." node_paths=PackedStringArray("node_to_shake")]
script = ExtResource("8_q0uba")
node_to_shake = NodePath("../Vertical")
shake_duration = 0.2

[node name="FlashEffect" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_h4y8n")
flash_material = ExtResource("10_5sqcu")
sprite = NodePath("../Vertical")
flash_duration = 0.1

[node name="ScaleEffect" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("11_1v2hr")
sprite = NodePath("../Vertical")
scale_amount = Vector2(1.2, 1.2)
scale_duration = 0.1

[node name="DestroyedEffect" type="Node" parent="." node_paths=PackedStringArray("actor", "stats", "dest_ef_spawner")]
script = ExtResource("12_ccupw")
actor = NodePath("..")
stats = NodePath("../Stats")
dest_ef_spawner = NodePath("DestroyedSpawner")

[node name="DestroyedSpawner" type="Node2D" parent="DestroyedEffect"]
script = ExtResource("4_oyxox")
scene = ExtResource("14_bk37d")
